@@ -36,6 +36,10 @@ Reset font size.
 Switch to another font, where \fIn\fP is 1 through 9. Fonts are defined
 in \fIconfig.h\fP. This also resets the font size.
 .TP
+\fBCtrl + Shift + F\fP
+Dumps the terminal history to a file and calls a tool you specified in
+\fIconfig.h\fP.
+.TP
 \fBCtrl + Shift + C\fP
 Copy currently selected text into clipboard.
 .TP
